# pherrite

./: .gitignore  CMakeLists.txt  README.md  main.cpp  tester.sh
grammar/: PherriteLexer.g4  PherriteParser.g4  mappings.org
samples/: concat.expr.out  print.c  read.ph  return0.ph  return0.ph.ir  return0.ph.out  return0.ph.parse  test.cpp
translation/: codegen.cpp  codegen.h  types.cpp  types.h
